# VINS-Fusion-ROS2

./: README.md  camera.yaml
camera/: CMakeLists.txt  package.xml
camera/src/: camera_node.cpp
camera_models/src/calib/: CameraCalibration.cc
docker/: Dockerfile
global_fusion/src/: globalOpt.cpp
loop_fusion/src/: pose_graph.cpp  pose_graph.h
vins/: CMakeLists.txt
vins/src/: KITTIOdomTest.cpp  camera.cpp
vins/src/estimator/: estimator.cpp  estimator.h
vins/src/factor/: pose_manifold.cpp  pose_manifold.h
vins/src/initial/: initial_sfm.cpp
